fix(k8s-config): back to commit